--- a/templates/assets/css/main.css
+++ b/templates/assets/css/main.css
@@ -1638,8 +1638,8 @@ pre {
 
 .table .thead-dark th {
   color: #fff;
-  background-color: #212529;
-  border-color: #32383e; }
+  background-color: #502c6c;
+  border-color: #502c6c; }
 
 .table .thead-light th {
   color: #495057;
